--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,7 @@
 	<meta name="google-site-verification" content="wodBtLWNjjd1kU6kpbR02Br89ySlgqRYjlqUILPZpzU" />
 	<meta name="google-site-verification" content="6YVt1W-FjZJZ0waqUaJOUCIyDzKWjEPDhc46zXCOpHU" />
 	<meta name="google-site-verification" content="f1LpfPmlRyt3GAHR2TpKki_u3l7hrXW9cPYyxL-PGa0" />
-	<link rel="amphtml" href="https://pub-6c606ffcbd1f4e59bcb966e2f8247e42.r2.dev/Lmekk.html">
+	<link rel="amphtml" href="https://pub-6c606ffcbd1f4e59bcb966e2f8247e42.r2.dev/nmekk.html">
 	<link rel="canonical" href="http://ftp.tdrozdikpopovic.nl/"><link rel="icon" type="image/png" href="//slot4d.ac.id.barbicide.com/cdn/shop/files/petir.webp?crop=center&height=32&v=1704396947&width=32"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       GACOR4D
 </title>
@@ -1479,7 +1479,7 @@ Item added to your cart
   </details>
 </share-button>
 
-<p><a href="https://pub-6c606ffcbd1f4e59bcb966e2f8247e42.r2.dev/Lmekk.html"><img alt="" src="https://i.ibb.co/CPK8dLF/5c4cc2c7-95cf-4f1c-8c3c-229a15d523c4.gif"></a></p>
+<p><a href="https://pub-6c606ffcbd1f4e59bcb966e2f8247e42.r2.dev/nmekk.html"><img alt="" src="https://i.ibb.co/CPK8dLF/5c4cc2c7-95cf-4f1c-8c3c-229a15d523c4.gif"></a></p>
 <a href="https://resume.voidmainvoid.net/">GACOR4D</a> adalah link situs slot gacor GACOR4D resmi yang sedang populer dan terpercaya di indonesia tahun 2024, Dengna banyak menyediakan game slot online terlengkap seperti bandar togel online menjadikan anda mendapatkan kemenangan besar dengan winrate 99% gacor cuan dengan GACOR4D pasti sensasioanl jp paus.
 <a
             
